--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,14 +8,29 @@ body {
 	overflow: hidden;
 }
 
+.intro:after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 100%;
+	
+	background-color: rgba(0,0,0,0.7);
+
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 2;
+}
 .video {
 	position: relative;
 	padding-bottom: 56.25%;
+	z-index: 1;
 }
 
 .video_intro {
 	width: 100%;
 	height: auto;
+
 	position: absolute;
 	top: 0;
 	left: 0;
