--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,10 @@ body {
 .intro {
 	max-height: 100vh;
 	overflow: hidden;
+	position: relative;
+
+	background: url("src/img/crusaders.jpg") center no-repeat;
+	background-size: cover;
 }
 
 .intro:after {
@@ -14,12 +18,22 @@ body {
 	width: 100%;
 	height: 100%;
 	
-	background-color: rgba(0,0,0,0.3);
+	background-color: rgba(0,0,0,0.5);
 
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: 2;
+}
+
+.intro_content {
+	widows: 100%;
+	height: 100%;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 3;
 }
 .video {
 	position: relative;
