--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,9 +7,9 @@ body {
 	max-height: 100vh;
 	overflow: hidden;
 	position: relative;
-
-	background: url("src/img/crusaders.jpg") center no-repeat;
+	background: url("../img/crusaders.jpg") center no-repeat;
 	background-size: cover;
+
 }
 
 .intro:after {
@@ -26,18 +26,9 @@ body {
 	z-index: 2;
 }
 
-.intro_content {
-	widows: 100%;
-	height: 100%;
-
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 3;
-}
 .video {
 	position: relative;
-	padding-bottom: 56.25%;
+	padding-bottom: 42.5%;
 	z-index: 1;
 }
 
@@ -49,3 +40,15 @@ body {
 	top: 0;
 	left: 0;
 }
+
+.intro_content {
+	widows: 100%;
+	height: 100%;
+	
+	background-color: ;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 3;
+}
+
