--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,7 @@
 body {
 	margin: 0;
 	font-family: Tahoma, sans-serif;
+	background-color: #140f0d;
 }
 
 .intro {
@@ -18,7 +19,7 @@ body {
 	width: 100%;
 	height: 100%;
 	
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0,0,0,0.25);
 
 	position: absolute;
 	top: 0;
