--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,11 +45,21 @@ body {
 .intro_content {
 	widows: 100%;
 	height: 100%;
+
+	font-size: 25px;
+	color: #ffffff;
+	text-align: center;
 	
-	background-color: ;
 	position: absolute;
-	top: 0;
+	top: 50%;
 	left: 0;
 	z-index: 3;
 }
 
+.header_img {
+	width: auto;
+	height: 100%;
+	position: relative;
+	padding-left: 15.5%;
+	overflow: hidden;
+}
