--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Open+Sans&display=swap');
 body {
 	margin: 0;
-	font-family: Tahoma, sans-serif;
-	background-color: #140f0d;
+	font-family: 'Cormorant Infant', serif;;
+	background-color: #f2f2f2;
+	font-weight: 300;
+	font-size: 16px;
+	color: #555;
+
+	-webkit-font-smoothing: antialiased;
+	-webkit-overflow-scrolling: touch;
 }
 
 .intro {
@@ -19,7 +26,7 @@ body {
 	width: 100%;
 	height: 100%;
 	
-	background-color: rgba(0,0,0,0.25);
+	background-color: rgba(0,0,0,0.4);
 
 	position: absolute;
 	top: 0;
@@ -62,4 +69,29 @@ body {
 	position: relative;
 	padding-left: 15.5%;
 	overflow: hidden;
+}
+
+a:hover, a:focus {
+	color: #7b7b7b;
+	text-decoration: none;
+	outline: 0;
+}
+
+hr {
+	display: block;
+	height: 1px;
+	border: 0;
+	border-top: 1px solid #ccc;
+	padding: 0;
+}
+
+.navbar {
+	font-weight: 800;
+	font-size: 14px;
+	padding-top: 15px
+	padding-bottom: 15px;
+}
+
+.navbar-inverse {
+	background-color: #2d2d2d;
 }
