--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Open+Sans&display=swap');
-body {
+html {
 	margin: 0;
 	font-family: 'Cormorant Infant', serif;;
 	background-color: #f2f2f2;
@@ -75,23 +75,4 @@ a:hover, a:focus {
 	color: #7b7b7b;
 	text-decoration: none;
 	outline: 0;
-}
-
-hr {
-	display: block;
-	height: 1px;
-	border: 0;
-	border-top: 1px solid #ccc;
-	padding: 0;
-}
-
-.navbar {
-	font-weight: 800;
-	font-size: 14px;
-	padding-top: 15px
-	padding-bottom: 15px;
-}
-
-.navbar-inverse {
-	background-color: #2d2d2d;
 }
