--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Open+Sans&display=swap');
 html {
-	margin: 0;
-	font-family: 'Cormorant Infant', serif;;
+	font-family: 'Cormorant Infant', serif;
 	background-color: #f2f2f2;
 	font-weight: 300;
 	font-size: 16px;
@@ -43,36 +42,44 @@ html {
 .video_intro {
 	width: 100%;
 	height: auto;
-
 	position: absolute;
 	top: 0;
 	left: 0;
 }
 
 .intro_content {
-	widows: 100%;
-	height: 100%;
-
 	font-size: 25px;
 	color: #ffffff;
 	text-align: center;
-	
+	width: 50%;
 	position: absolute;
-	top: 50%;
-	left: 0;
+	top: 40%;
+	left: 25%;
 	z-index: 3;
 }
 
-.header_img {
-	width: auto;
-	height: 100%;
-	position: relative;
-	padding-left: 15.5%;
-	overflow: hidden;
+.label {
+	background-image:url("../img/label_print.gif"); 
+	background-size: contain;
+    width:18px; 
+    height:25px; 
+    display:inline-block;
+    vertical-align:center;
 }
 
 a:hover, a:focus {
 	color: #7b7b7b;
 	text-decoration: none;
 	outline: 0;
+}
+
+.navbar-brand {
+	padding: 0;
+	text-transform: uppercase;
+	font-size:23px;
+	padding-bottom: 0.1%
+}
+
+.intro_speach {
+	background-color: #ffffff;
 }
