--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,21 +41,28 @@ html {
 
 .video_intro {
 	width: 100%;
-	height: auto;
+	overflow: auto;
 	position: absolute;
 	top: 0;
 	left: 0;
 }
 
 .intro_content {
-	font-size: 25px;
-	color: #ffffff;
-	text-align: center;
-	width: 50%;
+	width: 100%;
+	height: 100%;
+
 	position: absolute;
-	top: 40%;
-	left: 25%;
+	top: 0;
+	left: 0;
 	z-index: 3;
+}
+
+.intro_title {
+	font-size: 20px;
+	color: #fff;
+	margin: 0;
+	text-align: center;
+	margin: 4rem auto;
 }
 
 .label {
