--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Open+Sans&display=swap=Berkshire+Swash&display=swap" rel="stylesheet">');
 @import url('https://fonts.googleapis.com/css2?family=Girassol&display=swap');
+*, *:befor, *:after {
+	box-sizing: border-box;
+}
 html {
 	font-family: 'Cormorant Infant', serif;
 	background-color: #f2f2f2;
 	font-weight: 300;
-	font-size: 16px;
+	font-size: 18px;
 	color: #555;
+	cursor: url(../img/cursor_main.png) 0 0, pointer;
 
 	-webkit-font-smoothing: antialiased;
 	-webkit-overflow-scrolling: touch;
@@ -18,20 +22,10 @@ body {
 
 }
 
-.background_main {
-	position: relative;
-	background-image: url("../img/background_main.jpg");
-	background-position: 0 0;
-	background-repeat: no-repeat;
-	background-size: cover;
-
+a:hover {
+	cursor: url(../img/cursor_hand.png) 0 0, pointer;
+	transition: 0.12s linear
 }
-
-.background_wrap {
-	background-color: rgba(0,0,0,0.7);	
-	z-index: 1;
-}
-
 .intro {
 	max-height: 100vh;
 	overflow: hidden;
@@ -69,11 +63,16 @@ body {
 	left: 0;
 }
 
-.intro_content {
+.container {
+	overflow: hidden;
+}
+
+.intro_row {
 	width: 100%;
 	height: 100%;
-
+	
 	position: absolute;
+	overflow: hidden;
 	top: 0;
 	left: 0;
 	z-index: 3;
@@ -85,6 +84,20 @@ body {
 	margin: 0;
 	text-align: center;
 	margin: 1rem auto;
+}
+
+.background_main {
+	position: relative;
+	background-image: url("../img/background_main.jpg");
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+}
+
+.background_wrap {
+	background-color: rgba(0,0,0,0.7);	
+	z-index: 1;
 }
 
 .label {
@@ -104,8 +117,7 @@ body {
 	background-position: 0 0;
 	background-repeat: repeat-x;
 	border: 4px solid black;
-	box-shadow: inset 0px 0px 50px rgba(0,0,0,1);
-	color: red;
+	box-shadow: inset 0px 0px 100px rgba(0,0,0,0.8);
 }
 
 .navbar-brand {
@@ -118,6 +130,11 @@ body {
 	padding-bottom: 0.1%
 }
 
+.main_form {
+	background-color: #000; 
+	font-size: 28px;
+
+}
 .intro_speach {
 	color: #e7d9a2;
 }
@@ -128,8 +145,8 @@ body {
 }
 
 .btn-history, .btn-persons, .btn-order, .btn-weapon {
-	height: 300px;
-	width: 300px;
+	height: 400px;
+	width: 400px;
 	background-position: 0 0;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -140,10 +157,22 @@ body {
 }
 
 .btn-history:hover, .btn-persons:hover, .btn-order:hover, .btn-weapon:hover {
-	border: 10px solid black;
-	border-color: #6c5c1b;
-	cursor: pointer;
-	transition: 0.12s linear
+	border: 10px solid #6c5c1b;
+	cursor: url(../img/cursor_hand.png) 0 0, pointer;
+	transition: 0.12s linear;
+} 
+
+.btn-history:active, .btn-persons:active, .btn-order:active, .btn-weapon:active {
+	border: 10px solid #6c5c1b;
+	cursor: url(../img/cursor_hand.png) 0 0, pointer;
+	transition: 0.12s linear;
+} 
+
+.btn-history:focus, .btn-persons:focus, .btn-order:focus, .btn-weapon:focus {
+	border: 10px solid #6c5c1b;
+	cursor: url(../img/cursor_hand.png) 0 0, pointer;
+	transition: 0.12s linear;
+	vertical-align: middle;
 } 
 
 .btn-history {
@@ -182,14 +211,22 @@ body {
 }
 
 .nav_main_btn{
-	color: #d8bf5b; /* add7dc; */
-	font-weight: 600;
-
+	color: #fdcf15;
+	font-weight: 500;
 }
+
+.nav_main_btn:hover {
+	color: #00b3ff;
+
+	font-weight: 800;
+	/* text-decoration: underline; */
+	/* padding: 0px; */
+}
+
 footer {
 	color: #e5d69c; 
 	font-weight: 500;
-	background-image: url("../img/nav_back.jpg"); 
+	background-image: url(../img/nav_back.jpg); 
 	background-position: 0 0;
 	background-repeat: repeat-x;
 	border: 5px solid black;
