--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,7 +72,7 @@ a:hover {
 .intro_row {
 	width: 100%;
 	height: 100%;
-	
+
 	position: absolute;
 	overflow: hidden;
 	top: 0;
@@ -113,7 +113,7 @@ a:hover {
 	background-position: 0 0;
 	background-repeat: cover;
 	border: 4px solid black;
-	box-shadow: inset 0px 0px 50px rgba(0,0,0,0.8);
+	box-shadow: inset 0px 0px 100px rgba(0,0,0,0.8);
 }
 
 .navbar-brand {
@@ -142,15 +142,20 @@ a:hover {
 	cursor: url(../img/cursor_hand.png) 0 0, pointer;
 	box-sizing: padding-box;
 }
+
 .navbar-toggler:hover, .navbar-toggler:active, .navbar-toggler:focus {
-	border: 3px solid #c70e1b;
+	border: 1px solid #c70e1b;
 	outline: none;
 } 
 
 .intro_speach { 
+	margin: 3% auto;
 	color: #e7d9a2;
 	font-weight: 400;
 	font-size: 21px;
+	letter-spacing: 1.5px;
+	text-indent: 50px;
+	text-align: justify;
 }
 
 /* Menu */
@@ -164,7 +169,7 @@ a:hover {
 	background-size: cover;
 	border-radius: 0px;
 	border: 5px solid black;
-	margin-top: 10%;
+	margin-bottom: : 10%;
 	box-shadow: inset 0px 0px 100px rgba(0,0,0,1);
 }
 .btn-history {
