--- a/src/css/style.css
+++ b/src/css/style.css
@@ -178,7 +178,7 @@ a:hover {
 }
 
 .btn-history {
-	background: url(../img/history.webp);
+	background: url(../img/history.jpg);
 	background-position: 0 0;
 	background-repeat: no-repeat;
 	background-size: cover;
