--- a/src/css/style.css
+++ b/src/css/style.css
@@ -329,6 +329,14 @@ a:hover {
 	border: 1px solid rgb(0,179,255);
 }
 
+.input_text_field:focus {
+	cursor: url(../img/cursor_feather.png) 0 20, pointer !important;
+	background-color: #eee4bc;
+	transition: 0.15s linear;
+	box-shadow:  0px 0px 12px rgba(0,179,255,0.7);
+	border: 1px solid rgb(0,179,255);
+}
+
 .footer_speach {
 	text-align: center;
 	color: #fdcf15;
@@ -339,6 +347,9 @@ a:hover {
 .
 #suggest_materials {
 	margin: 0% 3% 5% 3%;
+	display: inline-block;
+	height: 200px;
+	width: 100%;
 }
 
 .accept_button {
